
workspace = { members = ["macros"] }

[package]
name = "wlib"
description = "A simple wayland windowing library that gives you a pixel buffer and not much else"
license = "MIT"
version = "0.1.3"
edition = "2024"



[dependencies]
macros = { path = "./macros" }
quote = "1.0.44"
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.12"
xkb = "0.3.0"
xkeysym = "0.2.1"
